--- a/task1/index.html
+++ b/task1/index.html
@@ -6,6 +6,10 @@
   <title>Responsive Image Gallery</title>
   <link rel="stylesheet" href="style.css" />
 </head>
+  <header style="text-align: center; padding: 20px;">
+    <img src="images/logo.png" alt="Responsive Image Gallery Logo" style="height: 60px;">
+    <h1 style="margin-top: 10px;">Responsive Image Gallery</h1>
+  </header>
 <body>
   <div class="gallery">
   <div class="img-w">
