--- a/task1/index.html
+++ b/task1/index.html
@@ -7,10 +7,10 @@
   <link rel="stylesheet" href="style.css" />
 </head>
   <header style="text-align: center; padding: 20px;">
-    <img src="images/logo.png" alt="Responsive Image Gallery Logo" style="height: 60px;">
+    <img src="image/logo.png" alt="Responsive Image Gallery Logo" style="height: 80px;">
     <h1 style="margin-top: 10px;">Responsive Image Gallery</h1>
   </header>
-<body>
+<body style="background: gold;">
   <div class="gallery">
   <div class="img-w">
     <img src="image/download.jpeg" alt="Sample 1">
