--- a/portfolio[level 3]/project.html
+++ b/portfolio[level 3]/project.html
@@ -11,7 +11,7 @@
     <header class="bg-gray-800 shadow-md">
         <div class="container mx-auto px-4 py-4 flex flex-col md:flex-row items-center justify-between">
             <div class="flex items-center">
-                <img src="https://via.placeholder.com/50" alt="Logo" class="h-12 w-12 rounded-full">
+                <img src="image/logo.png" alt="Logo" class="h-12 w-12 rounded-full">
                 <h1 class="text-2xl font-bold text-pink-400 ml-4">Rabi Bhagat</h1>
             </div>
             <nav class="mt-4 md:mt-0">
@@ -32,12 +32,10 @@
             <div class="project-card bg-gray-800 p-6 rounded-lg shadow-md">
                 <h3 class="text-xl font-semibold">Signature Making App</h3>
                 <p class="mt-2">
-                    A mobile app for creating, saving, and securing digital signatures with ease. Built for seamless user experience.
-                </p>
+                A web app for creating, saving, and securing digital signatures with ease.                </p>
                 <p class="mt-2"><strong>Tech Used:</strong> HTML, CSS, JavaScript, Flutter</p>
-                <div class="mt-4">
-                    <a href="https://github.com/Rabi-Bhagat" class="text-pink-400 hover:underline">View Code</a> |
-                    <a href="https://github.com/Rabi-Bhagat" class="text-pink-400 hover:underline">Repository</a>
+                <div class="mt-4"> |
+                    <a href="https://github.com/Rabi-Bhagat" class="text-pink-400 hover:underline"> View Repository</a>
                 </div>
             </div>
             <div class="project-card bg-gray-800 p-6 rounded-lg shadow-md">
@@ -76,8 +74,6 @@
         </div>
     </section>
 
-    <footer class="bg-gray-800 py-4 text-center">
-        <p>&copy; 2025 Rabi Bhagat. All rights reserved.</p>
-    </footer>
+
 </body>
 </html>
