--- a/portfolio[level 3]/skill.html
+++ b/portfolio[level 3]/skill.html
@@ -5,21 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Skills - Rabi Bhagat</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/devicon@2.15.1/devicon.min.css">
+    <link rel="stylesheet" href="skill.css">
 </head>
 <body class="bg-gray-900 text-gray-100 font-sans">
     <header class="bg-gray-800 shadow-md">
         <div class="container mx-auto px-4 py-4 flex flex-col md:flex-row items-center justify-between">
             <div class="flex items-center">
-                <img src="https://via.placeholder.com/50" alt="Logo" class="h-12 w-12 rounded-full">
+                <img src="image/logo.png" alt="Logo" class="h-12 w-12 rounded-full">
                 <h1 class="text-2xl font-bold text-pink-400 ml-4">Rabi Bhagat</h1>
             </div>
             <nav class="mt-4 md:mt-0">
                 <ul class="flex flex-wrap justify-center gap-6">
                     <li><a href="index.html" class="text-white hover:text-pink-400 transition">Home</a></li>
                     <li><a href="about.html" class="text-white hover:text-pink-400 transition">About</a></li>
-                    <li><a href="skills.html" class="text-white hover:text-pink-400 transition">Skills</a></li>
-                    <li><a href="projects.html" class="text-white hover:text-pink-400 transition">Projects</a></li>
+                    <li><a href="skill.html" class="text-white hover:text-pink-400 transition">Skills</a></li>
+                    <li><a href="project.html" class="text-white hover:text-pink-400 transition">Projects</a></li>
                     <li><a href="contact.html" class="text-white hover:text-pink-400 transition">Contact</a></li>
                 </ul>
             </nav>
@@ -33,40 +34,38 @@
         </p>
         <div class="mt-8 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
             <div class="skill-card bg-gray-800 p-6 rounded-lg shadow-md text-center">
-                <img src="https://via.placeholder.com/100" alt="Flutter" class="mx-auto mb-4">
+                <i class="devicon-flutter-plain"></i>
                 <h3 class="text-xl font-semibold">Flutter</h3>
                 <p>Building cross-platform mobile apps with intuitive UI.</p>
             </div>
             <div class="skill-card bg-gray-800 p-6 rounded-lg shadow-md text-center">
-                <img src="https://via.placeholder.com/100" alt="Python" class="mx-auto mb-4">
+                <i class="devicon-python-plain"></i>
                 <h3 class="text-xl font-semibold">Python</h3>
                 <p>Versatile programming for automation and backend logic.</p>
             </div>
             <div class="skill-card bg-gray-800 p-6 rounded-lg shadow-md text-center">
-                <img src="https://via.placeholder.com/100" alt="C++" class="mx-auto mb-4">
+                <i class="devicon-cplusplus-plain"></i>
                 <h3 class="text-xl font-semibold">C++</h3>
                 <p>High-performance programming for system-level applications.</p>
             </div>
             <div class="skill-card bg-gray-800 p-6 rounded-lg shadow-md text-center">
-                <img src="https://via.placeholder.com/100" alt="HTML" class="mx-auto mb-4">
+                <i class="devicon-html5-plain"></i>
                 <h3 class="text-xl font-semibold">HTML</h3>
                 <p>Structuring responsive and semantic web content.</p>
             </div>
             <div class="skill-card bg-gray-800 p-6 rounded-lg shadow-md text-center">
-                <img src="https://via.placeholder.com/100" alt="CSS" class="mx-auto mb-4">
+                <i class="devicon-css3-plain"></i>
                 <h3 class="text-xl font-semibold">CSS</h3>
                 <p>Styling modern, responsive web designs.</p>
             </div>
             <div class="skill-card bg-gray-800 p-6 rounded-lg shadow-md text-center">
-                <img src="https://via.placeholder.com/100" alt="JavaScript" class="mx-auto mb-4">
+                <i class="devicon-javascript-plain"></i>
                 <h3 class="text-xl font-semibold">JavaScript</h3>
                 <p>Dynamic and interactive web functionality.</p>
             </div>
         </div>
     </section>
 
-    <footer class="bg-gray-800 py-4 text-center">
-        <p>&copy; 2025 Rabi Bhagat. All rights reserved.</p>
-    </footer>
+
 </body>
 </html>
