--- a/portfolio[level 3]/about.html
+++ b/portfolio[level 3]/about.html
@@ -11,14 +11,14 @@
     <header class="bg-gray-800 shadow-md">
         <div class="container mx-auto px-4 py-4 flex flex-col md:flex-row items-center justify-between">
             <div class="flex items-center">
-                <img src="https://via.placeholder.com/50" alt="Logo" class="h-12 w-12 rounded-full">
+                <img src="image/logo.png" alt="Logo" class="h-12 w-12 rounded-full">
                 <h1 class="text-2xl font-bold text-pink-400 ml-4">Rabi Bhagat</h1>
             </div>
             <nav class="mt-4 md:mt-0">
                 <ul class="flex flex-wrap justify-center gap-6">
                     <li><a href="index.html" class="text-white hover:text-pink-400 transition">Home</a></li>
                     <li><a href="about.html" class="text-white hover:text-pink-400 transition">About</a></li>
-                    <li><a href="skills.html" class="text-white hover:text-pink-400 transition">Skills</a></li>
+                    <li><a href="skill.html" class="text-white hover:text-pink-400 transition">Skills</a></li>
                     <li><a href="projects.html" class="text-white hover:text-pink-400 transition">Projects</a></li>
                     <li><a href="contact.html" class="text-white hover:text-pink-400 transition">Contact</a></li>
                 </ul>
@@ -30,19 +30,15 @@
         <h2 class="text-3xl font-bold text-pink-400 text-center">About Me</h2>
         <div class="mt-8 max-w-3xl mx-auto">
             <p class="text-lg">
-                I’m Rabi Bhagat, a B.Tech Computer Science student at Maharishi Markandeshwar University, set to graduate in 2027. Originally from Nepal and currently based in India, I’m passionate about solving complex problems through code. My expertise lies in web development (HTML, CSS, JavaScript) and mobile app development using Flutter.
+                I’m Rabi Bhagat, a B.Tech Computer Science student at Maharishi Markandeshwar University(2023-2027). I’m passionate about solving complex problems through code. My expertise lies in web development (HTML, CSS, JavaScript) and mobile app development using Flutter.
             </p>
             <p class="mt-4">
-                With a strong foundation in programming and a drive for continuous learning, I specialize in creating responsive, user-friendly digital solutions. My coursework includes web and mobile app development, and I’m proficient with tools like VS Code, Android Studio, and GitHub.
+                With a strong foundation in programming and a drive for continuous learning, I specialize in creating responsive, user-friendly digital solutions. My coursework includes web and mobile app development, and I’m proficient with tools like VS Code, Android Studio, GitHub and Canva.
             </p>
-            <p class="mt-4">
-                Although I’m early in my career, I’ve worked on projects like a signature-making app, an e-commerce frontend, and a number guessing game in C. I’m excited to collaborate on innovative projects and bring creative visions to life!
-            </p>
+
         </div>
     </section>
 
-    <footer class="bg-gray-800 py-4 text-center">
-        <p>&copy; 2025 Rabi Bhagat. All rights reserved.</p>
-    </footer>
+
 </body>
 </html>
