--- a/portfolio[level 3]/index.html
+++ b/portfolio[level 3]/index.html
@@ -8,32 +8,36 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body class="bg-gray-900 text-gray-100 font-sans">
-    <!-- Header -->
-    <header class="bg-gray-800 shadow-md">
-        <div class="container mx-auto px-4 py-4 flex flex-col md:flex-row items-center justify-between">
-            <div class="flex items-center">
-                <img src="https://via.placeholder.com/50" alt="Logo" class="h-12 w-12 rounded-full">
-                <h1 class="text-2xl font-bold text-pink-400 ml-4">Rabi Bhagat</h1>
-            </div>
-            <nav class="mt-4 md:mt-0">
-                <ul class="flex flex-wrap justify-center gap-6">
-                    <li><a href="index.html" class="text-white hover:text-pink-400 transition">Home</a></li>
-                    <li><a href="about.html" class="text-white hover:text-pink-400 transition">About</a></li>
-                    <li><a href="skill.html" class="text-white hover:text-pink-400 transition">Skills</a></li>
-                    <li><a href="projects.html" class="text-white hover:text-pink-400 transition">Projects</a></li>
-                    <li><a href="contact.html" class="text-white hover:text-pink-400 transition">Contact</a></li>
-                </ul>
-            </nav>
+
+ <header class="bg-gray-800 shadow-md">
+    <div class="container mx-auto px-4 py-4 flex items-center justify-between">
+        <!-- Logo + Name -->
+        <div class="flex items-center space-x-4">
+            <img src="image/logo.png" alt="Logo" class="h-12 w-12 rounded-full object-cover border-2 border-pink-400">
+            <h1 class="text-2xl font-bold text-pink-400">Rabi Bhagat</h1>
         </div>
-    </header>
+        <!-- Navigation -->
+        <nav>
+            <ul class="flex flex-wrap justify-center gap-6">
+                <li><a href="index.html" class="text-white hover:text-pink-400 transition">Home</a></li>
+                <li><a href="about.html" class="text-white hover:text-pink-400 transition">About</a></li>
+                <li><a href="skill.html" class="text-white hover:text-pink-400 transition">Skills</a></li>
+                <li><a href="project.html" class="text-white hover:text-pink-400 transition">Projects</a></li>
+                <li><a href="contact.html" class="text-white hover:text-pink-400 transition">Contact</a></li>
+            </ul>
+        </nav>
+    </div>
+</header>
+
 
     <!-- Hero Section -->
     <section class="container mx-auto px-4 py-16 text-center">
-        <img src="https://via.placeholder.com/200" alt="Profile Picture" class="w-32 h-32 rounded-full mx-auto mb-6">
+       <img src="image/mine2.jpg" alt="Profile Picture" 
+     class="w-52 h-52 sm:w-60 sm:h-60 rounded-full mx-auto mb-6 shadow-lg ring-4 ring-pink-400 object-cover">
+
         <h2 class="text-4xl font-bold text-pink-400">Web & App Developer</h2>
         <p class="mt-4 text-lg max-w-2xl mx-auto">
-            Namaste 🙌 I’m Rabi Bhagat, a passionate developer from Nepal, dedicated to crafting responsive websites, intuitive mobile apps, and seamless digital solutions. Let’s build something extraordinary together! 🚀
-        </p>
+Hello! I’m Rabi Bhagat — a developer who loves building user-first websites and mobile apps. Whether it’s a sleek portfolio or a robust digital platform, I craft solutions that connect and inspire.        </p>
         <div class="mt-6 flex justify-center gap-4">
             <a href="https://github.com/Rabi-Bhagat" class="text-white hover:text-pink-400">GitHub</a>
             <a href="https://www.linkedin.com/in/rabi-bhagat789/" class="text-white hover:text-pink-400">LinkedIn</a>
@@ -41,9 +45,6 @@
         </div>
     </section>
 
-    <!-- Footer -->
-    <footer class="bg-gray-800 py-4 text-center">
-        <p>&copy; 2025 Rabi Bhagat. All rights reserved.</p>
-    </footer>
+
 </body>
 </html>
