add hosting site

--- a/portfolio[level 3]/contact.html
+++ b/portfolio[level 3]/contact.html
@@ -33,7 +33,7 @@
         </p>
         <div class="mt-6">
             <p>Email: <a href="mailto:abibhagat789@gmail.com" class="text-pink-400 hover:underline">abibhagat789@gmail.com</a></p>
-            <p>Phone: <a href="tel:+3307855628" class="text-pink-400 hover:underline">+3307855628</a></p>
+            <p>Phone: <a href="tel:8307855628" class="text-pink-400 hover:underline">8307855628</a></p>
         </div>
         <div class="mt-6">
             <h3 class="text-xl font-semibold">Socials</h3>
@@ -46,12 +46,10 @@
         </div>
         <div class="mt-6">
             <h3 class="text-xl font-semibold">Resume</h3>
-            <p><a href="resume.pdf" class="text-pink-400 hover:underline" download>Download my resume (PDF)</a></p>
+            <p style="font-weight: bolder;"><a href="resume.pdf" class="text-pink-400 hover:underline" download>Download my resume (PDF)</a></p>
         </div>
     </section>
 
-    <footer class="bg-gray-800 py-4 text-center">
-        <p>&copy; 2025 Rabi Bhagat. All rights reserved.</p>
-    </footer>
+
 </body>
 </html>
