--- a/portfolio[level 3]/project.html
+++ b/portfolio[level 3]/project.html
@@ -19,7 +19,7 @@
                     <li><a href="index.html" class="text-white hover:text-pink-400 transition">Home</a></li>
                     <li><a href="about.html" class="text-white hover:text-pink-400 transition">About</a></li>
                     <li><a href="skills.html" class="text-white hover:text-pink-400 transition">Skills</a></li>
-                    <li><a href="projects.html" class="text-white hover:text-pink-400 transition">Projects</a></li>
+                    <li><a href="project.html" class="text-white hover:text-pink-400 transition">Project</a></li>
                     <li><a href="contact.html" class="text-white hover:text-pink-400 transition">Contact</a></li>
                 </ul>
             </nav>
@@ -35,7 +35,8 @@
                 A web app for creating, saving, and securing digital signatures with ease.                </p>
                 <p class="mt-2"><strong>Tech Used:</strong> HTML, CSS, JavaScript, Flutter</p>
                 <div class="mt-4"> |
-                    <a href="https://github.com/Rabi-Bhagat" class="text-pink-400 hover:underline"> View Repository</a>
+                    <a href="https://signaturepage-umber.vercel.app/" class="text-pink-400 hover:underline"> View site</a> |
+                    <a href="https://github.com/Rabi-Bhagat/frontened-project/tree/main/build%20a%20signature%20app%20with%20HTML%20%2C%20CSS%20%20and%20JS%20(PR-2)" class="text-pink-400 hover:underline">View Repository</a>
                 </div>
             </div>
             <div class="project-card bg-gray-800 p-6 rounded-lg shadow-md">
@@ -45,19 +46,19 @@
                 </p>
                 <p class="mt-2"><strong>Tech Used:</strong> HTML, CSS, JavaScript</p>
                 <div class="mt-4">
-                    <a href="https://github.com/Rabi-Bhagat" class="text-pink-400 hover:underline">View Code</a> |
-                    <a href="https://github.com/Rabi-Bhagat" class="text-pink-400 hover:underline">Repository</a>
+                    <a href="https://ecommerce-seven-amber-35.vercel.app/" class="text-pink-400 hover:underline"> View site</a> |
+                    <a href="https://github.com/Rabi-Bhagat/frontened-project/tree/main/project-4(%20E%20commerece%20app%20using%20HTML%20and%20css)" class="text-pink-400 hover:underline">View Repository</a>
                 </div>
             </div>
             <div class="project-card bg-gray-800 p-6 rounded-lg shadow-md">
                 <h3 class="text-xl font-semibold">Number Guessing Game</h3>
                 <p class="mt-2">
-                    A fun, interactive game built in C to guess a randomly generated number.
+                    A fun, interactive game built in js to guess a randomly generated number.
                 </p>
-                <p class="mt-2"><strong>Tech Used:</strong> C</p>
+                <p class="mt-2"><strong>Tech Used:</strong> js</p>
                 <div class="mt-4">
-                    <a href="https://github.com/Rabi-Bhagat" class="text-pink-400 hover:underline">View Code</a> |
-                    <a href="https://github.com/Rabi-Bhagat" class="text-pink-400 hover:underline">Repository</a>
+                    <a href="https://numberguessinggame-nine.vercel.app/" class="text-pink-400 hover:underline"> View site</a> |
+                    <a href="https://github.com/Rabi-Bhagat/frontened-project/tree/main/number%20guessing%20game" class="text-pink-400 hover:underline">View Repository</a>
                 </div>
             </div>
             <div class="project-card bg-gray-800 p-6 rounded-lg shadow-md">
@@ -67,8 +68,19 @@
                 </p>
                 <p class="mt-2"><strong>Tech Used:</strong> HTML, CSS, JavaScript</p>
                 <div class="mt-4">
-                    <a href="https://github.com/Rabi-Bhagat" class="text-pink-400 hover:underline">View Code</a> |
-                    <a href="https://github.com/Rabi-Bhagat" class="text-pink-400 hover:underline">Repository</a>
+                    <a href="https://frontenedoftodolist.vercel.app/" class="text-pink-400 hover:underline"> View site</a> |
+                    <a href="https://github.com/Rabi-Bhagat/frontened-project/tree/main/Agileproject(to-do%20list)" class="text-pink-400 hover:underline">View Repository</a>
+                </div>
+            </div>
+
+                       <div class="project-card bg-gray-800 p-6 rounded-lg shadow-md">
+                <h3 class="text-xl font-semibold">Calculator </h3>
+                <p class="mt-2">
+                    Acalculator built using HTML, CSS, and JavaScript, offering basic arithmetic operations with a clean user interface.                </p>
+                <p class="mt-2"><strong>Tech Used:</strong> HTML, CSS, JavaScript</p>
+                <div class="mt-4">
+                    <a href="https://code-alpha-task2-sandy.vercel.app/" class="text-pink-400 hover:underline"> View site</a> |
+                    <a href="https://github.com/Rabi-Bhagat/CodeAlpha_web_internship_project/tree/main/task%202t" class="text-pink-400 hover:underline">View Repository</a>
                 </div>
             </div>
         </div>
