--- a/portfolio[level 3]/index.html
+++ b/portfolio[level 3]/index.html
@@ -39,11 +39,14 @@
         <p class="mt-4 text-lg max-w-2xl mx-auto">
 Hello! I’m Rabi Bhagat — a developer who loves building user-first websites and mobile apps. Whether it’s a sleek portfolio or a robust digital platform, I craft solutions that connect and inspire.        </p>
         <div class="mt-6 flex justify-center gap-4">
-            <a href="https://github.com/Rabi-Bhagat" class="text-white hover:text-pink-400">GitHub</a>
-            <a href="https://www.linkedin.com/in/rabi-bhagat789/" class="text-white hover:text-pink-400">LinkedIn</a>
-            <a href="mailto:abibhagat789@gmail.com" class="text-white hover:text-pink-400">Gmail</a>
+            <a target="_blank" href="https://github.com/Rabi-Bhagat" class="text-white hover:text-pink-400">GitHub</a>
+            <a target="_blank" href="https://www.linkedin.com/in/rabi-bhagat789/" class="text-white hover:text-pink-400">LinkedIn</a>
+            <a target="_blank" href="mailto:abibhagat789@gmail.com" class="text-white hover:text-pink-400">Gmail</a>
         </div>
     </section>
+
+
+    <script src="portfolio.js"></script>
 
 
 </body>
