--- a/portfolio[level 3]/contact.html
+++ b/portfolio[level 3]/contact.html
@@ -11,7 +11,7 @@
     <header class="bg-gray-800 shadow-md">
         <div class="container mx-auto px-4 py-4 flex flex-col md:flex-row items-center justify-between">
             <div class="flex items-center">
-                <img src="https://via.placeholder.com/50" alt="Logo" class="h-12 w-12 rounded-full">
+                <img src="image/logo.png" alt="Logo" class="h-12 w-12 rounded-full">
                 <h1 class="text-2xl font-bold text-pink-400 ml-4">Rabi Bhagat</h1>
             </div>
             <nav class="mt-4 md:mt-0">
@@ -32,7 +32,7 @@
             I’m excited to connect and discuss potential projects or opportunities. Reach out via email or social media!
         </p>
         <div class="mt-6">
-            <p>Email: <a href="mailto:abibhagat789@gmail.com" class="text-pink-400 hover:underline">abibhagat789@gmail.com</a></p>
+            <p>Email: <a href="mailto:rabibhagat789@gmail.com" class="text-pink-400 hover:underline">rabibhagat789@gmail.com</a></p>
             <p>Phone: <a href="tel:8307855628" class="text-pink-400 hover:underline">8307855628</a></p>
         </div>
         <div class="mt-6">
