--- a/portfolio[level 3]/project.html
+++ b/portfolio[level 3]/project.html
@@ -35,8 +35,8 @@
                 A web app for creating, saving, and securing digital signatures with ease.                </p>
                 <p class="mt-2"><strong>Tech Used:</strong> HTML, CSS, JavaScript, Flutter</p>
                 <div class="mt-4"> |
-                    <a href="https://signaturepage-umber.vercel.app/" class="text-pink-400 hover:underline"> View site</a> |
-                    <a href="https://github.com/Rabi-Bhagat/frontened-project/tree/main/build%20a%20signature%20app%20with%20HTML%20%2C%20CSS%20%20and%20JS%20(PR-2)" class="text-pink-400 hover:underline">View Repository</a>
+                    <a target="_blank" href="https://signaturepage-umber.vercel.app/" class="text-pink-400 hover:underline"> View site</a> |
+                    <a target="_blank" href="https://github.com/Rabi-Bhagat/frontened-project/tree/main/build%20a%20signature%20app%20with%20HTML%20%2C%20CSS%20%20and%20JS%20(PR-2)" class="text-pink-400 hover:underline">View Repository</a>
                 </div>
             </div>
             <div class="project-card bg-gray-800 p-6 rounded-lg shadow-md">
@@ -46,8 +46,8 @@
                 </p>
                 <p class="mt-2"><strong>Tech Used:</strong> HTML, CSS, JavaScript</p>
                 <div class="mt-4">
-                    <a href="https://ecommerce-seven-amber-35.vercel.app/" class="text-pink-400 hover:underline"> View site</a> |
-                    <a href="https://github.com/Rabi-Bhagat/frontened-project/tree/main/project-4(%20E%20commerece%20app%20using%20HTML%20and%20css)" class="text-pink-400 hover:underline">View Repository</a>
+                    <a target="_blank" href="https://ecommerce-seven-amber-35.vercel.app/" class="text-pink-400 hover:underline"> View site</a> |
+                    <a target="_blank" href="https://github.com/Rabi-Bhagat/frontened-project/tree/main/project-4(%20E%20commerece%20app%20using%20HTML%20and%20css)" class="text-pink-400 hover:underline">View Repository</a>
                 </div>
             </div>
             <div class="project-card bg-gray-800 p-6 rounded-lg shadow-md">
@@ -57,8 +57,8 @@
                 </p>
                 <p class="mt-2"><strong>Tech Used:</strong> js</p>
                 <div class="mt-4">
-                    <a href="https://numberguessinggame-nine.vercel.app/" class="text-pink-400 hover:underline"> View site</a> |
-                    <a href="https://github.com/Rabi-Bhagat/frontened-project/tree/main/number%20guessing%20game" class="text-pink-400 hover:underline">View Repository</a>
+                    <a target="_blank" href="https://numberguessinggame-nine.vercel.app/" class="text-pink-400 hover:underline"> View site</a> |
+                    <a target="_blank" href="https://github.com/Rabi-Bhagat/frontened-project/tree/main/number%20guessing%20game" class="text-pink-400 hover:underline">View Repository</a>
                 </div>
             </div>
             <div class="project-card bg-gray-800 p-6 rounded-lg shadow-md">
@@ -68,8 +68,8 @@
                 </p>
                 <p class="mt-2"><strong>Tech Used:</strong> HTML, CSS, JavaScript</p>
                 <div class="mt-4">
-                    <a href="https://frontenedoftodolist.vercel.app/" class="text-pink-400 hover:underline"> View site</a> |
-                    <a href="https://github.com/Rabi-Bhagat/frontened-project/tree/main/Agileproject(to-do%20list)" class="text-pink-400 hover:underline">View Repository</a>
+                    <a target="_blank" href="https://frontenedoftodolist.vercel.app/" class="text-pink-400 hover:underline"> View site</a> |
+                    <a target="_blank" href="https://github.com/Rabi-Bhagat/frontened-project/tree/main/Agileproject(to-do%20list)" class="text-pink-400 hover:underline">View Repository</a>
                 </div>
             </div>
 
@@ -79,8 +79,8 @@
                     Acalculator built using HTML, CSS, and JavaScript, offering basic arithmetic operations with a clean user interface.                </p>
                 <p class="mt-2"><strong>Tech Used:</strong> HTML, CSS, JavaScript</p>
                 <div class="mt-4">
-                    <a href="https://code-alpha-task2-sandy.vercel.app/" class="text-pink-400 hover:underline"> View site</a> |
-                    <a href="https://github.com/Rabi-Bhagat/CodeAlpha_web_internship_project/tree/main/task%202t" class="text-pink-400 hover:underline">View Repository</a>
+                    <a target="_blank" href="https://code-alpha-task2-sandy.vercel.app/" class="text-pink-400 hover:underline"> View site</a> |
+                    <a target="_blank" href="https://github.com/Rabi-Bhagat/CodeAlpha_web_internship_project/tree/main/task%202" class="text-pink-400 hover:underline">View Repository</a>
                 </div>
             </div>
         </div>
