--- a/portfolio[level 3]/contact.html
+++ b/portfolio[level 3]/contact.html
@@ -38,12 +38,12 @@
         <div class="mt-6">
             <h3 class="text-xl font-semibold">Socials</h3>
             <ul class="flex justify-center gap-4 mt-2">
-                <li><a href="https://github.com/Rabi-Bhagat" class="text-pink-400 hover:underline">GitHub</a></li>
-                <li><a href="https://www.linkedin.com/in/rabi-bhagat789/" class="text-pink-400 hover:underline">LinkedIn</a></li>
-                <li><a href="https://t.me/@Rabi_Bhagat" class="text-pink-400 hover:underline">Telegram</a></li>
-                <li><a href="https://www.facebook.com/rabi.bhagat.313" class="text-pink-400 hover:underline">Facebook</a></li>
+                <li><a target="_blank" href="https://github.com/Rabi-Bhagat" class="text-pink-400 hover:underline">GitHub</a></li>
+                <li><a target="_blank" href="https://www.linkedin.com/in/rabi-bhagat789/" class="text-pink-400 hover:underline">LinkedIn</a></li>
+                <li><a target="_blank" href="https://t.me/@Rabi_Bhagat" class="text-pink-400 hover:underline">Telegram</a></li>
+                <li><a target="_blank" href="https://www.facebook.com/rabi.bhagat.313" class="text-pink-400 hover:underline">Facebook</a></li>
             </ul>
-        </div>
+        </div> 
         <div class="mt-6">
             <h3 class="text-xl font-semibold">Resume</h3>
             <p style="font-weight: bolder;"><a href="resume.pdf" class="text-pink-400 hover:underline" download>Download my resume (PDF)</a></p>
