--- a/portfolio[level 3]/about.html
+++ b/portfolio[level 3]/about.html
@@ -12,14 +12,14 @@
         <div class="container mx-auto px-4 py-4 flex flex-col md:flex-row items-center justify-between">
             <div class="flex items-center">
                 <img src="image/logo.png" alt="Logo" class="h-12 w-12 rounded-full">
-                <h1 class="text-2xl font-bold text-pink-400 ml-4">Rabi Bhagat</h1>
+                <h1 class="text-2xl font-bold text-pink-400 ml-4" style="font-weight:bolder">Rabi Bhagat</h1>
             </div>
             <nav class="mt-4 md:mt-0">
                 <ul class="flex flex-wrap justify-center gap-6">
                     <li><a href="index.html" class="text-white hover:text-pink-400 transition">Home</a></li>
                     <li><a href="about.html" class="text-white hover:text-pink-400 transition">About</a></li>
                     <li><a href="skill.html" class="text-white hover:text-pink-400 transition">Skills</a></li>
-                    <li><a href="projects.html" class="text-white hover:text-pink-400 transition">Projects</a></li>
+                    <li><a href="project.html" class="text-white hover:text-pink-400 transition">Projects</a></li>
                     <li><a href="contact.html" class="text-white hover:text-pink-400 transition">Contact</a></li>
                 </ul>
             </nav>
